compiler/testData/diagnostics/tests/kt310.kt
// FIR_IDENTICAL

fun f(c: LongRange): Int {
    return c.<!FUNCTION_EXPECTED!>start<!>()
}
